--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,11 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
+    <style>
+      .message-board {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      form {
+        padding: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 1rem;
+        border: 2px solid black;
+      }
+      label {
+        padding: 1rem;
+        font-size: larger;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+      }
+      input[type="text"] {
+        padding: 6px;
+      }
+      input[type="submit"] {
+        padding: 10px;
+        background-color: aqua;
+        border: none;
+        border-radius: 20px;
+      }
+      input[type="submit"]:hover{
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <div class="message-board">
       <h1>Message Board</h1>
-      <form action="#" method="post">
+      <form action="/new" method="post">
         <label for="author_name">
           Author Name
           <input type="text" name="author_name" id="author_name" />
